--- a/.github/workflows/my-starter-workflow.yml
+++ b/.github/workflows/my-starter-workflow.yml
@@ -4,7 +4,13 @@ on:
   workflow_dispatch:
 
 jobs:
-  build:
+    call-reusable-workflow:
+      uses: ./.github/workflows/reusable-workflow.yml
+      with:
+       node: 14
+
+       
+build:
     runs-on: ubuntu-latest
 
     steps:
@@ -14,3 +20,4 @@ jobs:
         run: |
           echo Add other actions to build,
           echo test, and deploy to your project.
+
