--- a/.github/workflows/my-starter-workflow.yml
+++ b/.github/workflows/my-starter-workflow.yml
@@ -5,7 +5,10 @@ on:
 
 jobs:
     call-reusable-workflow:
-      uses: ./.github/workflows/reusable-workflow.yml
+    strategy:
+    matrix:
+      nodeversion: [14, 16, 18, 20]
+    uses: ./.github/workflows/reusable-workflow.yml
       with:
        node: 14
 
